register + fix Syntax URL